[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gp_preprocessor"
version = "0.1.0"
description = "A package for Gaussian Process preprocessing."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = "MIT"
dependencies = [
    "numpy",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["gp_preprocessor"]
